<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_round_check_circle_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/success"
                android:textColor="@color/HomeThemeColor"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/payment_successful"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/totalPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/total_16_00"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <Button
                android:id="@+id/btnPaymentContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/login_background"
                android:paddingHorizontal="@dimen/_35sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
              />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>