<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.products.ViewProduct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_period="2000"
                app:iss_placeholder="@color/white"
                app:iss_error_image="@color/white"

                />


        </LinearLayout>



        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            tools:text="@string/mac"
            android:textColor="@color/light_Heading_Color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager" />

        <TextView
            android:id="@+id/tv_discription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            tools:text="@string/aka_miracle_alien_cookies_miracle_cookies"
            android:textColor="@color/light_color"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager"
            app:layout_constraintBottom_toTopOf="@id/ll_address">

            <ImageView
                android:id="@+id/AddToWishList_ImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="visible"
                android:src="@drawable/grey_square_heart_image" />

            <ImageView
                android:id="@+id/AddToWishList_fill"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/red_square_image"
                android:visibility="gone"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            tools:text="@string/_221"
            android:visibility="visible"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/HomeThemeColor"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

        <TextView
            android:id="@+id/txtCurrently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Currently unavailable"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            android:textColor="#D2BF1E2E" />

        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/choose_delivery_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCurrently">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_weight=".2"
                android:src="@drawable/shop_1_" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:layout_marginLeft="@dimen/_2sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storeName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/mathew_marta"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/storeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/address_string"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/storePinCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    tools:text="@string/pincode_123456"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/storeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    tools:text="@string/_91_8076197211"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/circle_he" />


                        <TextView
                            android:id="@+id/noOfLikes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_1sdp"
                            tools:text="@string/_3453"
                            android:textColor="@color/HomeThemeColor"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/circle_shop" />


                        <TextView
                            android:id="@+id/noOfProducts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_1sdp"
                            tools:text="@string/_3453"
                            android:textColor="@color/HomeThemeColor"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_viewmore"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:text="@string/view_more"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/HomeThemeColor"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_about_product"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/about_this_product"
            android:textColor="@color/HomeThemeColor"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_address" />

        <TextView
            android:id="@+id/tv_about_product_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/product_discription_string"
            android:textColor="@color/light_color"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/_9sdp"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_product" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_product_discription"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:weightSum="2"
            android:paddingBottom="@dimen/_10sdp">

            <Button
                android:id="@+id/btnGoTOcart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/login_background"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/go_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                />

            <Button
                android:id="@+id/btnBuyNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/login_background"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/btn_buyNow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="horizontal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>