<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_cardModellayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_5sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/_7sdp">


        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/choose_delivery_address"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_weight="1.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pramod"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/address_string"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/tv_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/pincode_123456"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/_91_8076197211"
                    android:textColor="@color/light_Heading_Color"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_discription" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                >

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_edit_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/deleteClick"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/delete_address"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintStart_toStartOf="@id/img_edit"
                    app:layout_constraintTop_toBottomOf="@id/img_edit"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>